force-app/main/default/objects/Partner_Opportunity__c/Partner_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Partner Opportunity</label>
    <nameField>
        <displayFormat>CPO -{0000}</displayFormat>
        <label>Partner Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>