force-app/main/default/objects/Partner_Opportunity__c/fields/CAM__c.field-meta.xml
<CustomField>
    <fullName>CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>