force-app/main/default/objects/Partner_Opportunity__c/fields/End_Customer_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Primary_Contact__c</fullName>
    <label>End Customer Primary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>