force-app/main/default/objects/Partner_Opportunity__c/fields/Expected_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Book_Date__c</fullName>
    <label>Expected Book Date</label>
    <type>Date</type>
</CustomField>