force-app/main/default/objects/Partner_Opportunity__c/fields/Funnel_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indirect - Include in Funnel Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partner Opportunities</relationshipLabel>
    <relationshipName>Partner_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>