force-app/main/default/objects/Partner_Opportunity__c/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <label>Opportunity Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>