force-app/main/default/objects/Partner_Opportunity__c/fields/Opportunity_Selling_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Selling_Stage__c</fullName>
    <formula>TEXT(Funnel_Opportunity__r.StageName)</formula>
    <inlineHelpText>The Opportunity stage might change as the Opportunity progresses.</inlineHelpText>
    <label>Opportunity Selling Stage</label>
    <type>Text</type>
</CustomField>