force-app/main/default/objects/Partner_Opportunity__c/fields/Opportunity_Selling_Stage_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Selling_Stage_Description__c</fullName>
    <formula>CASE(Opportunity_Selling_Stage__c, 
&quot;Analyzing&quot;, &quot;Gathering detailed data about the opportunity (business discovery) and performing a systematic opportunity analysis.&quot;,
&quot;Validating&quot;, &quot;Having analyzed the opportunity, validate the client needs and our ability to win and implement proﬁtable business. Risk management is a key focus at this stage&quot;,
&quot;Offering&quot;, &quot;Engaging the necessary technical and sales support resources to help deﬁne the solution and build the business case. This stage contains the bulk of the work for the sales team.&quot;,
&quot;Proposing&quot;, &quot;First, a trial close to informally assess the solution ﬁt and the client‘s reaction. Next, the proposal completion and presentation to key decision makers.&quot;,
&quot;Closing&quot;, &quot;Occurs between the linal presentation and lormal signing of contracts to complete the sale.&quot;,
&quot;&quot;)</formula>
    <label>Opportunity Selling Stage Description</label>
    <type>Text</type>
</CustomField>