force-app/main/default/objects/Partner_Opportunity__c/fields/Partner_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Person__c</fullName>
    <label>Partner Sales Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>