force-app/main/default/objects/Partner_Opportunity__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Quote Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>