force-app/main/default/objects/Partner_Opportunity__c/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>