force-app/main/default/objects/Partner_Opportunity__c/fields/TAM_Name__c.field-meta.xml
<CustomField>
    <fullName>TAM_Name__c</fullName>
    <formula>TAM__r.FirstName + &apos; &apos; + TAM__r.LastName</formula>
    <label>TAM</label>
    <type>Text</type>
</CustomField>